feat: Implement: - Task instance. - Task type. - Connection with Postgresql database.