@@ -1,16 +1,20 @@
 package com.crode.todo_list_api.controller;
 
-import com.crode.todo_list_api.dto.TaskDto;
+import com.crode.todo_list_api.dto.TaskInstanceDto;
 import com.crode.todo_list_api.model.Task;
+import com.crode.todo_list_api.service.TaskInstanceService;
 import com.crode.todo_list_api.service.TaskService;
+import com.crode.todo_list_api.utils.TaskType;
 import com.crode.todo_list_api.utils.TaskUtil;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @Controller
 @RequestMapping("/dashboard")
@@ -18,28 +22,31 @@ public class DashboardController {
 
     private final TaskService service;
 
-    public DashboardController(TaskService service) {
+    private final TaskInstanceService taskInstanceService;
+
+    public DashboardController(TaskService service, TaskInstanceService taskInstanceService) {
         this.service = service;
+        this.taskInstanceService = taskInstanceService;
     }
 
     @GetMapping()
     public String showDashboard(Model model) {
         List<Task> allTasks = service.getAllTasks();
-        List<TaskDto> dtoTasks = allTasks.stream().map(TaskUtil::taskToDto).toList();
-        List<TaskDto> todayTasks = getTasksForToday(dtoTasks);
-        model.addAttribute("tasks", todayTasks);
+        List<TaskInstanceDto> taskInstanceDtos = getTaskInstancesForToday(allTasks);
+        model.addAttribute("tasks", taskInstanceDtos);
         return "dashboard/index";
     }
 
-    private List<TaskDto> getTasksForToday(List<TaskDto> allTasks) {
+    private List<TaskInstanceDto> getTaskInstancesForToday(List<Task> tasks) {
         LocalDate today = LocalDate.now();
-        return allTasks.stream().filter(
-                task -> task.getStartDate() != null &&
-                task.getEndDate() != null &&
-                !task.getStartDate().toLocalDate().isAfter(today) &&
-                !task.getEndDate().toLocalDate().isBefore(today)
-        ).collect(Collectors.toList());
-//        LocalDate today = LocalDate.now();
-//        return taskRepository.findAllByStartDateLessThanEqualAndEndDateGreaterThanEqual(today, today); todo
+        LocalDateTime startOfDay = today.atStartOfDay();
+        LocalDateTime endOfDay = today.atTime(LocalTime.MAX);
+
+        return tasks.stream()
+            .filter(task -> task.getType() == TaskType.HABIT)
+            .map(task -> taskInstanceService.getTaskInstanceForTaskAndDate(task.getId(), startOfDay, endOfDay))
+            .filter(Objects::nonNull)
+            .map(TaskUtil::taskInstanceToDto)
+            .toList();
     }
 }
